--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+
+  <color name="primaryColor">#4db6ac</color>
+  <color name="primaryLightColor">#82e9de</color>
+  <color name="primaryDarkColor">#00867d</color>
+  <color name="accentColor">#ffea00</color>
+  <color name="accentLightColor">#ffff56</color>
+  <color name="accentDarkColor">#c7b800</color>
+  <color name="primaryTextColor">#000000</color>
+  <color name="secondaryTextColor">#000000</color>
+    
 </resources>
